<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tower">

    <Button
        android:id="@+id/btn_en"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:fontFamily="@font/coda"
        android:padding="4dp"
        android:text="@string/btn_en"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/btn_de"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_en"
        android:layout_alignLeft="@+id/btn_en"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:fontFamily="@font/coda"
        android:padding="4dp"
        android:text="@string/btn_de"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:typeface="sans" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/select_option"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_position_real_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_select"
            android:text="@string/rt_position_of_tower"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_motionGraph_real_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_position_real_time"
            android:text="@string/rt_circular_motion_of_tower"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_timeSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_motionGraph_real_time"
            android:text="@string/spectral_visualization"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_motionGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_timeSeries"
            android:text="@string/circular_motion_of_tower"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_motionGraph"
            android:text="@string/weather_condition"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_weather"
            android:text="@string/maps"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_aboutProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_map"
            android:text="@string/about_project"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>